--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>倒计时五秒后跳页面</title>
+    <title>倒计时五秒后可跳过页面</title>
     <style>
         .center { margin-left: auto;
             margin-right: auto;
@@ -64,10 +64,10 @@
 <!--    <source src="./video/mp4/mov_bbb.mp4" type=video/mp4>-->
 <!--</video>-->
 
-<video onended="myFunction()" class='center' width="400" height="300" src="../video/mp4/mov_bbb.mp4" autoplay muted>
+<video onended="myFunction()" class='center' width="400" height="300" src="./mov_bbb.mp4" autoplay muted>
 </video>
 
 <font color="green"><p id="Time" >5</p></font>
-<p id="Font">将跳转至主页</p>
+<p id="Font">将显示跳转按钮</p>
 </body>
 </html>
