--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
 <!--    <source src="./video/mp4/mov_bbb.mp4" type=video/mp4>-->
 <!--</video>-->
 
-<video onended="myFunction()" class='center' width="400" height="300" src="./mov_bbb.mp4" autoplay muted>
+<video onended="myFunction()" class='center' width="400" height="300" src="./mov_bbb.mp4" autoplay muted playsinline>
 </video>
 
 <font color="green"><p id="Time" >5</p></font>
