--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,8 @@
 
         function myFunction(){
             //console.log("The End.")
-            window.location.href="https://scanto.tech/";
+            //window.location.href="https://scanto.tech/";
+            window.location.href="http://www.timhowan.com/";
         }
 
         function countDown(){
@@ -46,7 +47,8 @@
                 document.body.appendChild(btn);
 
                 btn.onclick = function () {
-                    window.location.href="https://www.targetmediaculcreative.com.sg/";
+                    //window.location.href="https://www.targetmediaculcreative.com.sg/";
+                    window.location.href="http://www.timhowan.com/";
                 }
             }else{
                 time.innerHTML = time.innerHTML-1;
